Test data set generator add. sf-gen-test-data.py

--- a/notebooks/try2.ipynb
+++ b/notebooks/try2.ipynb
@@ -42,8 +42,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T14:15:27.330220Z",
-     "start_time": "2024-05-05T14:15:27.135826Z"
+     "end_time": "2024-05-08T14:47:19.234573Z",
+     "start_time": "2024-05-08T14:47:12.825673Z"
     }
    },
    "outputs": [
@@ -51,11 +51,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "Break\n"
      ]
     }
    ],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "cell_type": "code",
@@ -65,8 +67,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-05T14:15:41.971372Z",
-     "start_time": "2024-05-05T14:15:37.236365Z"
+     "end_time": "2024-05-08T14:47:27.577525Z",
+     "start_time": "2024-05-08T14:47:22.608549Z"
     }
    },
    "outputs": [
@@ -76,40 +78,40 @@
      "text": [
       "Config file found at: /Users/daved/Dev/pinon/config/master.xlsx\n",
       "Simfin data directory: /Users/daved/Dev/pinon/simfin_data\n",
-      "Dataset \"us-companies\" on disk (17 days old).\n",
+      "Dataset \"us-companies\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-income-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-banks-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-income-banks-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-income-insurance-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-income-insurance-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-derived-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-banks-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-derived-banks-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
-      "Dataset \"us-derived-insurance-quarterly\" on disk (17 days old).\n",
+      "Dataset \"us-derived-insurance-quarterly\" on disk (20 days old).\n",
       "- Loading from disk ... Done!\n",
       "There is an error in the supplied ticker symbol PAGS in Company List of sheet: V of config file: /Users/daved/Dev/pinon/config/master.xlsx. Company was not found and was dropped from the list.\n"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 3
   },
   {
    "cell_type": "code",
    "source": [
     "m = pn.Multiples(config)\n",
     "m.run_qtr_derived()\n",
-    "m.qtr_derived_bases"
+    "m.qtr_derived_bases\n",
+    "qdb = m.qtr_derived_bases\n",
+    "qdb"
    ],
    "metadata": {
     "collapsed": false,
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "start_time": "2024-05-05T20:09:20.029190Z"
+     "end_time": "2024-05-08T14:50:27.063457Z",
+     "start_time": "2024-05-08T14:47:33.089089Z"
     }
    },
    "outputs": [
@@ -117,11 +119,359 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Adding breaking report for ticker V for report date 2024-03-31\n"
+      "Dataset \"us-shareprices-daily\" on disk (20 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Dataset \"us-derived-shareprices-daily\" on disk (20 days old).\n",
+      "- Loading from disk ... Done!\n",
+      "Adding breaking report for ticker V for report date 2024-03-31\n",
+      "Adding breaking report for ticker MA for report date 2024-03-31\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "                    Quarterly EPS   TTM EPS       Qtr Rev       TTM Rev  \\\n",
+       "Ticker Report Date                                                        \n",
+       "AXP    2009-03-31        0.378028       NaN  5.926000e+09           NaN   \n",
+       "       2009-06-30        0.289270       NaN  6.092000e+09           NaN   \n",
+       "       2009-09-30        0.541914       NaN  6.016000e+09           NaN   \n",
+       "       2009-12-31        0.605753  1.814965  6.302000e+09  2.433600e+10   \n",
+       "       2010-03-31        0.743073  2.180010  6.560000e+09  2.497000e+10   \n",
+       "...                           ...       ...           ...           ...   \n",
+       "WU     2022-12-31        0.662065  2.341387  1.091900e+09  4.475500e+09   \n",
+       "       2023-03-31        0.390834  2.002074  1.036900e+09  4.356700e+09   \n",
+       "       2023-06-30        0.469116  1.970674  1.170000e+09  4.388400e+09   \n",
+       "       2023-09-30        0.455272  1.977287  1.097800e+09  4.396600e+09   \n",
+       "       2023-12-31        0.341581  1.656803  1.052300e+09  4.357000e+09   \n",
+       "\n",
+       "                    Qtr Div  TTM Div  Quarterly PE Ratio  TTM PE Ratio  \\\n",
+       "Ticker Report Date                                                       \n",
+       "AXP    2009-03-31      0.18      NaN            9.983114           NaN   \n",
+       "       2009-06-30      0.18      NaN           20.044546           NaN   \n",
+       "       2009-09-30      0.18      NaN           14.128823           NaN   \n",
+       "       2009-12-31      0.00     0.54           15.820058     21.120074   \n",
+       "       2010-03-31      0.18     0.54           13.402914     18.273942   \n",
+       "...                     ...      ...                 ...           ...   \n",
+       "WU     2022-12-31      0.23     0.92            5.213723      5.897062   \n",
+       "       2023-03-31      0.23     0.92            8.326586      6.501887   \n",
+       "       2023-06-30      0.23     0.92            6.140839      5.847271   \n",
+       "       2023-09-30      0.23     0.92            6.730764      6.199050   \n",
+       "       2023-12-31      0.23     0.92            8.929055      7.363578   \n",
+       "\n",
+       "                    Mu Quarterly Price Breaking Report Employed  \\\n",
+       "Ticker Report Date                                                \n",
+       "AXP    2009-03-31            15.095574                    False   \n",
+       "       2009-06-30            23.193175                    False   \n",
+       "       2009-09-30            30.626406                    False   \n",
+       "       2009-12-31            38.332188                    False   \n",
+       "       2010-03-31            39.837377                    False   \n",
+       "...                                ...                      ...   \n",
+       "WU     2022-12-31            13.807302                    False   \n",
+       "       2023-03-31            13.017258                    False   \n",
+       "       2023-06-30            11.523065                    False   \n",
+       "       2023-09-30            12.257302                    False   \n",
+       "       2023-12-31            12.200000                    False   \n",
+       "\n",
+       "                   AROI 1 year window AROI 3 year window AROI 5 year window  \\\n",
+       "Ticker Report Date                                                            \n",
+       "AXP    2009-03-31            1.575072           0.483548           0.414268   \n",
+       "       2009-06-30            0.740916           0.327018           0.319124   \n",
+       "       2009-09-30            0.404079           0.243649           0.250104   \n",
+       "       2009-12-31            0.107392           0.155751           0.195146   \n",
+       "       2010-03-31            0.072521           0.136608           0.185663   \n",
+       "...                               ...                ...                ...   \n",
+       "WU     2022-12-31           -0.045628                NaN                NaN   \n",
+       "       2023-03-31            0.007893                NaN                NaN   \n",
+       "       2023-06-30                 NaN                NaN                NaN   \n",
+       "       2023-09-30                 NaN                NaN                NaN   \n",
+       "       2023-12-31                 NaN                NaN                NaN   \n",
+       "\n",
+       "                   AROI 10 year window AROI all year window  \n",
+       "Ticker Report Date                                           \n",
+       "AXP    2009-03-31              0.22338             0.178839  \n",
+       "       2009-06-30             0.172638                  NaN  \n",
+       "       2009-09-30             0.152486                  NaN  \n",
+       "       2009-12-31             0.131612                  NaN  \n",
+       "       2010-03-31             0.124948                  NaN  \n",
+       "...                                ...                  ...  \n",
+       "WU     2022-12-31                  NaN                  NaN  \n",
+       "       2023-03-31                  NaN                  NaN  \n",
+       "       2023-06-30                  NaN                  NaN  \n",
+       "       2023-09-30                  NaN                  NaN  \n",
+       "       2023-12-31                  NaN                  NaN  \n",
+       "\n",
+       "[444 rows x 15 columns]"
+      ],
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>Quarterly EPS</th>\n",
+       "      <th>TTM EPS</th>\n",
+       "      <th>Qtr Rev</th>\n",
+       "      <th>TTM Rev</th>\n",
+       "      <th>Qtr Div</th>\n",
+       "      <th>TTM Div</th>\n",
+       "      <th>Quarterly PE Ratio</th>\n",
+       "      <th>TTM PE Ratio</th>\n",
+       "      <th>Mu Quarterly Price</th>\n",
+       "      <th>Breaking Report Employed</th>\n",
+       "      <th>AROI 1 year window</th>\n",
+       "      <th>AROI 3 year window</th>\n",
+       "      <th>AROI 5 year window</th>\n",
+       "      <th>AROI 10 year window</th>\n",
+       "      <th>AROI all year window</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>Report Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">AXP</th>\n",
+       "      <th>2009-03-31</th>\n",
+       "      <td>0.378028</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>5.926000e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9.983114</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>15.095574</td>\n",
+       "      <td>False</td>\n",
+       "      <td>1.575072</td>\n",
+       "      <td>0.483548</td>\n",
+       "      <td>0.414268</td>\n",
+       "      <td>0.22338</td>\n",
+       "      <td>0.178839</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-06-30</th>\n",
+       "      <td>0.289270</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.092000e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>20.044546</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>23.193175</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.740916</td>\n",
+       "      <td>0.327018</td>\n",
+       "      <td>0.319124</td>\n",
+       "      <td>0.172638</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-09-30</th>\n",
+       "      <td>0.541914</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>6.016000e+09</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>14.128823</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>30.626406</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.404079</td>\n",
+       "      <td>0.243649</td>\n",
+       "      <td>0.250104</td>\n",
+       "      <td>0.152486</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2009-12-31</th>\n",
+       "      <td>0.605753</td>\n",
+       "      <td>1.814965</td>\n",
+       "      <td>6.302000e+09</td>\n",
+       "      <td>2.433600e+10</td>\n",
+       "      <td>0.00</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>15.820058</td>\n",
+       "      <td>21.120074</td>\n",
+       "      <td>38.332188</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.107392</td>\n",
+       "      <td>0.155751</td>\n",
+       "      <td>0.195146</td>\n",
+       "      <td>0.131612</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2010-03-31</th>\n",
+       "      <td>0.743073</td>\n",
+       "      <td>2.180010</td>\n",
+       "      <td>6.560000e+09</td>\n",
+       "      <td>2.497000e+10</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>0.54</td>\n",
+       "      <td>13.402914</td>\n",
+       "      <td>18.273942</td>\n",
+       "      <td>39.837377</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.072521</td>\n",
+       "      <td>0.136608</td>\n",
+       "      <td>0.185663</td>\n",
+       "      <td>0.124948</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th rowspan=\"5\" valign=\"top\">WU</th>\n",
+       "      <th>2022-12-31</th>\n",
+       "      <td>0.662065</td>\n",
+       "      <td>2.341387</td>\n",
+       "      <td>1.091900e+09</td>\n",
+       "      <td>4.475500e+09</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>5.213723</td>\n",
+       "      <td>5.897062</td>\n",
+       "      <td>13.807302</td>\n",
+       "      <td>False</td>\n",
+       "      <td>-0.045628</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-03-31</th>\n",
+       "      <td>0.390834</td>\n",
+       "      <td>2.002074</td>\n",
+       "      <td>1.036900e+09</td>\n",
+       "      <td>4.356700e+09</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>8.326586</td>\n",
+       "      <td>6.501887</td>\n",
+       "      <td>13.017258</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0.007893</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-06-30</th>\n",
+       "      <td>0.469116</td>\n",
+       "      <td>1.970674</td>\n",
+       "      <td>1.170000e+09</td>\n",
+       "      <td>4.388400e+09</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>6.140839</td>\n",
+       "      <td>5.847271</td>\n",
+       "      <td>11.523065</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-09-30</th>\n",
+       "      <td>0.455272</td>\n",
+       "      <td>1.977287</td>\n",
+       "      <td>1.097800e+09</td>\n",
+       "      <td>4.396600e+09</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>6.730764</td>\n",
+       "      <td>6.199050</td>\n",
+       "      <td>12.257302</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023-12-31</th>\n",
+       "      <td>0.341581</td>\n",
+       "      <td>1.656803</td>\n",
+       "      <td>1.052300e+09</td>\n",
+       "      <td>4.357000e+09</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>0.92</td>\n",
+       "      <td>8.929055</td>\n",
+       "      <td>7.363578</td>\n",
+       "      <td>12.200000</td>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>444 rows × 15 columns</p>\n",
+       "</div>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "execution_count": null
+   "execution_count": 4
   },
   {
    "cell_type": "code",
